<resources>
    <string name="app_name">iTour</string>

    <string name="google_api_key">AIzaSyDzQ8mUPOcoMRVwP4x_S1gsT55bQXNTzWM</string>

    <string name="title_main_activity">Main</string>
    <string name="title_welcome_activity">Welcome</string>
    <string name="title_detailed_event_activity">Detailed Event</string>
    <string name="title_detailed_site_activity">Detailed Site</string>

    <string name="menu_map">Map</string>
    <string name="menu_events">Events</string>
    <string name="menu_sites">Sites</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_about">About</string>
    <string name="menu_all_sites">All Sites</string>
    <string name="menu_churches">Churches</string>
    <string name="menu_real_estate">Real Estate</string>
    <string name="menu_historic">Historic</string>
    <string name="menu_night_life">Night Life</string>
    <string name="menu_promenade">Promenade</string>
    <string name="menu_delicacies">Delicacies</string>

    <string name="category_church">church</string>
    <string name="category_real_estate">real estate</string>
    <string name="category_historic">historic</string>
    <string name="category_night_life">night life</string>
    <string name="category_promenade">promenade</string>
    <string name="category_delicacy">delicacy</string>

    <string name="exit">Do you want to exit?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="permission_phone">PLease allow phone permission.</string>
    <string name="permission_location">PLease allow location permission.</string>
    <string name="current_location">You\'re Here</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="development_team">Development Team</string>
    <string name="lead_programmer">Lead Programmer: Gil Palma</string>
    <string name="lead_designer">Lead Designer: Gil Palma</string>
    <string name="resource_manager">Resource Manager: Marc Gabriel Doromal</string>
    <string name="researcher">Researcher: John Paolo Medina</string>
</resources>
