<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="false"
            android:layout_alignParentRight="false"
            android:layout_alignParentTop="false"
            android:layout_centerHorizontal="true"
            android:background="#ffffffff"
            android:gravity="start"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_launcher" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="#ff000000"
                android:textSize="14dp"
                android:textStyle="bold" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="left|center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/development_team"
                android:textColor="#ff000000"
                android:textSize="16dp" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="left|center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/lead_programmer"
                android:textColor="#ff000000"
                android:textSize="14dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="left|center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/lead_designer"
                android:textColor="#ff000000"
                android:textSize="14dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="left|center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/resource_manager"
                android:textColor="#ff000000"
                android:textSize="14dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="left|center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/researcher"
                android:textColor="#ff000000"
                android:textSize="14dp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>